# Weather_TgBot_Aiogram

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
weather_tgbot_aiogram/: __main__.py  config.py  icon.py
weather_tgbot_aiogram/exceptions/: exceptions.py
weather_tgbot_aiogram/handlers/: __init__.py  callback_handlers.py  command_handlers.py  command_start_handler.py  start.py  text_handlers.py  weather.py  weather_n_days.py  weather_now.py
weather_tgbot_aiogram/keyboards/: inlinekeyboard.py  standard_keyboard.py
weather_tgbot_aiogram/models/: pydantic_models.py
weather_tgbot_aiogram/services/: get_format_weather.py  get_weather_n_days.py  get_weather_now.py  get_weather_period.py  icon.py  inlinekeyboard.py
