[tool.poetry]
name = "weather-tgbot-aiogram"
version = "0.1.0"
description = ""
authors = ["vova2092 <vovai2092@yandex.ru>"]
readme = "README.md"
packages = [{include = "weather_tgbot_aiogram"}]

[tool.poetry.dependencies]
python = "^3.11"

python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
