[tool.poetry]
name = "weather-tgbot-aiogram"
version = "0.1.0"
description = ""
authors = ["vova2092 <vovai2092@yandex.ru>"]
readme = "README.md"
packages = [{include = "weather_tgbot_aiogram"}]

[tool.poetry.dependencies]
python = "^3.11"

python-dotenv = "^1.0.0"
aiogram = "3.0.0b7"
pytz = "^2023.3"
requests = "^2.28.2"
flake8 = "^6.0.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
